# magpie

./: .gitignore  .travis.yml  LICENSE  Makefile  NEWS  README  README.hadoop  README.hbase  README.hdfsfederation  README.intellustre  README.magpienetworkfs  README.mahout  README.md  README.no-local-dir  README.phoenix  README.pig  README.spark  README.storm  README.tachyon  README.testsuite  README.zookeeper  TODO  configure  configure.ac  create-dist.sh  hadoop-common-exports  hadoop-example-environment-extra  hadoop-example-job  hadoop-example-post-job  hadoop-example-pre-job  hadoop-expand-nodes  hadoop-gather  hadoop-post-run  hadoop-run  hadoop.sbatch  magpie-check-inputs  magpie-cleanup  magpie-common-exports  magpie-common-functions  magpie-constants  (+155 more)
conf/: core-site-1.0.xml  core-site-1.X.xml  core-site-2.0-intellustre.xml  core-site-2.0-magpienetworkfs.xml  core-site-2.0-tachyon.xml  core-site-2.0.xml  hadoop-env-1.0.sh  hadoop-env-2.0.sh  hadoop-env-2.X.sh  hadoop.log4j.properties  hbase-env.sh  hbase-site.xml  hdfs-site-1.0.xml  hdfs-site-2.0-hdfs-federation-namenode.xml  hdfs-site-2.0-hdfs-federation.xml  hdfs-site-2.0-hdfs-namenode.xml  hdfs-site-2.0.xml  kafka.server.properties  magpie-launch-storm-env.sh  mapred-env-2.0.sh  mapred-site-1.0.xml  mapred-site-2.0.xml  phoenix-env.sh  phoenix.log4j.properties  spark-defaults.conf  spark-defaults.conf-tachyon  spark-defaults.conf-yarn  spark-env-post-1-0.sh  spark-env-pre-1-0.sh  spark-env.sh  storm-daemon-env.sh  storm.yaml  storm_env.ini  tachyon-env.sh  yarn-env-2.0.sh  yarn-site-2.0.xml  zeppelin-env.sh  zeppelin-site.xml  zoo.cfg  zookeeper-env.sh  (+1 more)
doc/: README  README.alluxio.md  README.faq  README.faq.md  README.hadoop  README.hadoop.md  README.hbase  README.hbase.md  README.hive  README.hive.md  README.hostname  README.hostname-map  README.hostname-map.md  README.intellustre  README.kafka  README.kafka.md  README.mahout  README.mahout.md  README.md  README.no-local-dir  README.no-local-dir.md  README.phoenix  README.phoenix.md  README.pig  README.pig.md  README.ray  README.spark  README.spark.md  README.storm  README.storm.md  README.tachyon  README.tensorflow  README.tensorflow-horovod.md  README.testsuite  README.testsuite.md  README.uda  (+4 more)
(+1087 files in other folders)
